# pydev

./: .gitignore  NOTES.md  README.md  pyproject.toml
.github/workflows/: tests.yml
dev/: Notes
src/pydev/: __init__.py  __main__.py  add.py  addition.py  build.py  cli.py  deps.py  doc.py  init.py  install.py  prune.py  release.py  test.py
tests/: test_basics.py  test_build.py  test_deps.py  test_doc.py  test_init.py  test_install.py  test_prune.py  test_release.py  test_test.py
