dependencies = ["tomlkit~=0.11.8"]
[project]
name = "pydev"
version = "0.0.1"
description = "a helper for developing python modules"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name = "Markus Barthel"}]
classifiers= ["Programming Language :: Python :: 3"]

[build-system]
requires = ["setuptools>=42.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--capture=sys" 
testpaths = ["tests",]

[install]
executable = true

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "pytest-html",
    "isort",
    "build"
]